# Eron

./: .gitignore  README.md  git_id_test.txt
.DOC/: AITT_FULL_ARCHITECTURE.md  AITT_Hardware_Remote_Modules_Description.md  AITT_Native_Module_Analysis.tex  APP_ARCHITECTURE_DIAGRAMS.md  APP_ARCHITECTURE_FOCUSED.md  ARCHITECTURE.json  ARCHITECTURE.md  COMMUNICATION_PROTOCOL_MATRIX.json  HARDWARE_MODULE_INTERACTION.dsl  HARDWARE_MODULE_INTERACTION.json  HARDWARE_MODULE_SIMPLE.json  INTERACTION_CONTRACTS.json  INTERACTION_FLOWS.md
aitt/: pom.xml
aitt/native/: CMakeLists.txt  README.md  build.bat
aitt/native/include/: aitt_native.h
aitt/native/src/: aitt_native.c  chipset_mpc5777m.c  chipset_s32k148.c  jni_bindings.c
aitt/native/templates/: CMM_GENERATION_GUIDE.md  mpc_validation_template.cmm
aitt/output/: flash_1772777199114.cmm  flash_1772804139152.cmm  flash_1772822366554.cmm  flash_1772822620926.cmm
aitt/samples/firmware/: README.txt
aitt/src/main/java/com/aerospace/aitt/: App.java
aitt/src/main/java/com/aerospace/aitt/backend/hardware/: CMMScriptGenerator.java  HardwareAbstractionLayer.java  MPCHardwareImpl.java
aitt/src/main/java/com/aerospace/aitt/config/ui/: ConfigController.java
aitt/src/main/java/com/aerospace/aitt/core/auth/: AuthService.java  User.java
aitt/src/main/java/com/aerospace/aitt/core/config/: AppSettings.java  SettingsStore.java
aitt/src/main/java/com/aerospace/aitt/core/config/ui/: SettingsController.java
aitt/src/main/java/com/aerospace/aitt/core/log/: AppLogger.java
aitt/src/main/java/com/aerospace/aitt/core/ui/: Alerts.java  BaseController.java  InfiniteCarousel.java  InfiniteCarouselDemo.java  StageManager.java  ThemeManager.java
aitt/src/main/java/com/aerospace/aitt/core/util/: ChecksumUtil.java  FileUtil.java  HexUtil.java
aitt/src/main/java/com/aerospace/aitt/flashing/data/: ProfileStore.java  SessionStore.java
aitt/src/main/java/com/aerospace/aitt/flashing/model/: FlashStatus.java  FlashingSession.java  SoftwareModule.java  TargetProfile.java  ValidationResult.java
aitt/src/main/java/com/aerospace/aitt/flashing/service/: CmmGenerator.java  FlashingService.java  Trace32Runner.java  Validator.java
aitt/src/main/java/com/aerospace/aitt/flashing/ui/: FlashingController.java
aitt/src/main/java/com/aerospace/aitt/hardware/ui/: HardwareController.java
aitt/src/main/java/com/aerospace/aitt/native_/: ChipsetConfig.java  CommandResult.java  HardwareBridge.java  HardwareInfo.java  HardwareService.java  NativeException.java  package-info.java
aitt/src/main/java/com/aerospace/aitt/remote/model/: NetworkProbe.java
aitt/src/main/java/com/aerospace/aitt/remote/service/: NetworkProbeService.java  RemoteFlashingService.java
aitt/src/main/java/com/aerospace/aitt/remote/ui/: RemoteProbeController.java
aitt/src/main/java/com/aerospace/aitt/scripting/ui/: ScriptingController.java
aitt/src/main/java/com/aerospace/aitt/shell/: DashboardController.java  LoginController.java  MainApp.java  ModuleLoader.java
aitt/src/main/java/com/aerospace/aitt/testdev/service/: CMMTestService.java
aitt/src/main/java/com/aerospace/aitt/testdev/ui/: TestDevController.java
aitt/src/main/resources/: logback.xml
aitt/src/main/resources/css/: style-light.css
aitt/src/main/resources/fxml/: login.fxml  remote.fxml  testdev.fxml
aitt/src/main/resources/native/windows-x64/: .gitkeep
